# warrant-mini

./: .env.example  .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml
examples/: clean_newsletter.md  fintech_landing.md  influencer_post.txt
tests/: test_smoke.py
warrant_mini/: __init__.py  checker.py  cli.py  input_loader.py  models.py  prompts.py  rules.py  rules.yaml  web.py
