[project]
name = "warrant-mini"
version = "0.1.0"
description = "A miniature AI marketing-compliance checker — risk-tiered findings with reasoning traces and suggested fixes."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.69",
    "pydantic>=2.6",
    "rich>=13.7",
    "typer>=0.12",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pyyaml>=6.0",
    "truststore>=0.10.4",
    "fastapi>=0.139.2",
    "uvicorn>=0.30",
]

[project.scripts]
warrant-mini = "warrant_mini.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["warrant_mini"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
